--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,12 +5,22 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "^14.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-resizable-panels": "^2.0.18",
+    "prettier": "^3.3.3",
+    "sonner": "^1.5.0",
+    "fuse.js": "^7.0.0",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0",
+    "rehype-highlight": "^7.0.0",
+    "highlight.js": "^11.9.0",
+    "@tailwindcss/typography": "^0.5.13",
     "@tanstack/react-query": "^5.51.1",
     "zustand": "^4.5.2",
     "zod": "^3.23.8",
@@ -27,4 +37,3 @@
     "framer-motion": "^11.3.2"
   }
 }
-
