--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -3,8 +3,5 @@
   "version": "0.1.0",
   "type": "module",
   "main": "src/index.ts",
-  "dependencies": {
-    "zod": "^3.23.8"
-  }
+  "dependencies": { "zod": "^3.23.8" }
 }
-
