--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,31 +9,39 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^14.2.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-resizable-panels": "^2.0.18",
-    "prettier": "^3.3.3",
-    "sonner": "^1.5.0",
-    "fuse.js": "^7.0.0",
-    "react-markdown": "^9.0.1",
-    "remark-gfm": "^4.0.0",
-    "rehype-highlight": "^7.0.0",
-    "highlight.js": "^11.9.0",
+    "@hookform/resolvers": "^3.9.0",
+    "@monaco-editor/react": "^4.6.0",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@tailwindcss/typography": "^0.5.13",
     "@tanstack/react-query": "^5.51.1",
-    "zustand": "^4.5.2",
-    "zod": "^3.23.8",
-    "@hookform/resolvers": "^3.9.0",
-    "react-hook-form": "^7.52.2",
-    "@radix-ui/react-scroll-area": "^1.0.5",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.3.2",
+    "fuse.js": "^7.0.0",
+    "highlight.js": "^11.9.0",
+    "lucide-react": "^0.378.0",
     "monaco-editor": "^0.49.0",
-    "@monaco-editor/react": "^4.6.0",
+    "next": "^14.2.5",
+    "prettier": "^3.3.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.52.2",
+    "react-markdown": "^9.0.1",
+    "react-resizable-panels": "^2.0.18",
+    "rehype-highlight": "^7.0.0",
+    "remark-gfm": "^4.0.0",
+    "sonner": "^1.5.0",
+    "tailwind-merge": "^2.3.0",
     "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.7.0",
-    "clsx": "^2.1.1",
-    "tailwind-merge": "^2.3.0",
-    "lucide-react": "^0.378.0",
-    "framer-motion": "^11.3.2"
+    "zod": "^3.23.8",
+    "zustand": "^4.5.2"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
+    "@types/node": "24.2.1",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
+    "typescript": "5.9.2"
   }
 }
