fix: add dev api scripts

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "codex-studio",
   "private": true,
+  "packageManager": "pnpm@10.5.2",
   "devDependencies": {
     "turbo": "latest"
   },
